added card capabilities + sections to course menus

--- a/public/static/css/course_home_pages.css
+++ b/public/static/css/course_home_pages.css
@@ -1,8 +1,17 @@
-section > ol > li:hover{
+.card-grid-simple li:hover{
     font-weight: bold;
 }
 
-section > ol > li a{
+.card-grid-simple a{
+    color: var(--bs-text-body);
+    text-decoration: none;
+}
+
+section li:hover{
+    font-weight: bold;
+}
+
+section > ol > li > a{
     color: var(--bs-text-body);
     text-decoration: none;
 }
