--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,7 +112,7 @@ div.grid{
         <div id="tam2xx">
             <div class="d-flex justify-content-between flex-row title-section mt-0">
                 <h3 class="flex-shrink-1">Introductory Mechanics</h3>
-                <div class="form-check form-switch simp-switch flex-grow-1">
+                <div class="form-check form-switch simp-switch ">
                     <input class="form-check-input simp-btn" type="checkbox" role="switch" onchange="toggle_simplified_view(this);">
                     <label class="form-check-label" style="text-wrap: nowrap;">Simplified view:</label>
                 </div>
