removed r perp from 211 vectors page
removed r perp from 211 vectors page; more geared towards 212

--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -388,14 +388,7 @@ Alternatively, the vector components can be determined geometrically via the ang
   </p>
 </DisplayEquation>
 
-<p>
-  In 2D there are two perpendicular directions to a given
-  vector <InlineEquation equation="\\vec{a}" />, given by <InlineEquation equation="\\vec{a}^\\perp" /> and
-  <InlineEquation equation="-\\vec{a}^\\perp" />. In 3D there is are many perpendicular
-  vectors, and there is no simple formula like <a
-  href="#rvv-en">#rvv-en</a> for 3D.
-</p>
-
+<div style = "display: none;">
 <Center>
   <PrairieDrawCanvas id="rvv-fn-c" width="400" height="300" class="figureImage">
     <p class="controls">
@@ -409,6 +402,7 @@ Alternatively, the vector components can be determined geometrically via the ang
     </p>
   </PrairieDrawCanvas>
 </Center>
+</div>
 </SubSubSection>
 
 <SubSubSubSection title="Dot product identities" id="dot_product_identities">
