undid italicized words MOI
changed formulas using words w/ \\mathrm{}

--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -77,10 +77,10 @@ import Col from "../../components/Col.astro"
         <tr>
             <th>Units</th>
             <td>
-                <InlineEquation equation="mass * length ^ 2"/>
+                <InlineEquation equation="\\mathrm{mass} * \\mathrm{length} ^ 2"/>
             </td>
             <td class="table-shaded">
-                <InlineEquation equation="length^4"/>
+                <InlineEquation equation="\\mathrm{length} ^ 4"/>
             </td>
         </tr>
         <tr>
