Derivation Fix and Image Width Fix
Mixed top line of vector derivation and corresponding image width

--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -279,10 +279,10 @@ Alternatively, the vector components can be determined geometrically via the ang
 
 <!-- There's a picture from the Overleaf document that needs to get inserted here - it's figure 7 in the 210 Overleaf File -->
 
-<Image src='/sta/vectors_scalars/UnitVecAngles.jpg' width='6'></Image>
+<Image src='/sta/vectors_scalars/UnitVecAngles.jpg' width='3'></Image>
 
 <DisplayEquation equation = "\\vec{A} = |A| * \\cos \\alpha * \\hat{\\imath} + |A| * \\cos \\beta * \\hat{\\jmath} + |A| * \\cos \\gamma * \\hat{k}" title = "The vector can be written as" background = "True" derivation = "True" id = "sc">
-  <DisplayEquation equation = `\\begin{align} \\vec{A} &= A_x * \\hat{\\imath} + |A| * \\hat{\\jmath} * |A| * \\hat{k} \\\\
+  <DisplayEquation equation = `\\begin{align} \\vec{A} &= A_x * \\hat{\\imath} + A_y * \\hat{\\jmath} * A_z * \\hat{k} \\\\
     &= |A| * \\cos \\alpha * \\hat{\\imath} + |A| * \\cos \\beta * \\hat{\\jmath} + |A| * \\cos \\gamma * \\hat{k} \\\\
     &= |A| * [\\cos \\alpha * \\hat{\\imath} + \\cos \\beta * \\hat{\\jmath} + \\cos \\gamma * \\hat{k}] \\\\
     &= |A| * \\hat{u}_A \\end{align}`/>
