undid italicized word in MOI
undid italicized word in a sentence in MOI

--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -110,7 +110,7 @@ import Col from "../../components/Col.astro"
 
 The moment of inertia used in statics is the "second moment of area".
 This is a mass property that determines the amount of torque that is needed to create an angular acceleration about a specific axis of rotation. 
-The dimension of the area moment of inertia is <InlineEquation equation='length^4' />.
+The dimension of the area moment of inertia is <InlineEquation equation='\\mathrm{length} ^ 4' />.
 
 <DisplayEquation equation='I_x = \\int_{A}^{} y^2 \\,dA \\' title="Moment of inertia about the x-axis" background="True" />
 
