--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -273,6 +273,11 @@ The direction of a vector can be written as a unit vector by dividing the vector
     &= \\frac{1}{\\cancel{|A|}} * \\cancel{|A|} * \\hat{u}_A \\\\
     &= \\hat{u}_A \\end{align}`/>
 </DisplayEquation>
+
+</SubSection>
+
+<SubSubSection title = "Directional cosines" id = "directional_cosines">
+
 <p>
 Alternatively, the vector components can be determined geometrically via the angles of each component with respect to the Cartesian Axes. 
 </p>
@@ -281,14 +286,15 @@ Alternatively, the vector components can be determined geometrically via the ang
 
 <Image src='/sta/vectors_scalars/UnitVecAngles.jpg' width='3'></Image>
 
-<DisplayEquation equation = "\\vec{A} = |A| * \\cos \\alpha * \\hat{\\imath} + |A| * \\cos \\beta * \\hat{\\jmath} + |A| * \\cos \\gamma * \\hat{k}" title = "The vector can be written as" background = "True" derivation = "True" id = "sc">
-  <DisplayEquation equation = `\\begin{align} \\vec{A} &= A_x * \\hat{\\imath} + A_y * \\hat{\\jmath} * A_z * \\hat{k} \\\\
-    &= |A| * \\cos \\alpha * \\hat{\\imath} + |A| * \\cos \\beta * \\hat{\\jmath} + |A| * \\cos \\gamma * \\hat{k} \\\\
-    &= |A| * [\\cos \\alpha * \\hat{\\imath} + \\cos \\beta * \\hat{\\jmath} + \\cos \\gamma * \\hat{k}] \\\\
-    &= |A| * \\hat{u}_A \\end{align}`/>
+<DisplayEquation equation = `\\begin{align} \\vec{A} &= A_x * \\hat{\\imath} + A_y * \\hat{\\jmath} * A_z * \\hat{k} \\\\
+    &= (|A| * \\cos \\alpha) * \\hat{\\imath} + (|A| * \\cos \\beta) * \\hat{\\jmath} + (|A| * \\cos \\gamma) * \\hat{k} \\end{align}` title = "The vector can be written as" background = "True" derivation = "True" id = "sc">
+    <DisplayEquation equation = `\\begin{align} \\vec{A} &= A_x * \\hat{\\imath} + A_y * \\hat{\\jmath} * A_z * \\hat{k} \\\\
+      &= (|A| * \\cos \\alpha) * \\hat{\\imath} + (|A| * \\cos \\beta) * \\hat{\\jmath} + (|A| * \\cos \\gamma) * \\hat{k} \\\\
+      &= |A| * [\\cos \\alpha * \\hat{\\imath} + \\cos \\beta * \\hat{\\jmath} + \\cos \\gamma * \\hat{k}] \\\\
+      &= |A| * \\hat{u}_A \\end{align}`/>
 </DisplayEquation>
 
-</SubSection>
+</SubSubSection>
 
 <SubSection title="Scalar and Vector Products" id="scalar_and_vector_products"></SubSection>
 
@@ -371,7 +377,6 @@ Alternatively, the vector components can be determined geometrically via the ang
   vectors are <em>perpendicular</em>, <em>orthogonal</em>, or
   <em>normal</em> to each other.
 </p>
-
 
 </SubSubSection>
 
