cartesian coordinates sentencing tense
put all titles and subtitles, and into sentencing tense in cartesian coordinates page

--- a/src/pages/sta/cartesian_coordinates.astro
+++ b/src/pages/sta/cartesian_coordinates.astro
@@ -17,12 +17,12 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vector_bases'>Vector Bases</a></li> 
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#right_hand_rule'>Right Hand Rule</a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vector_bases'>Vector bases</a></li> 
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#right_hand_rule'>Right hand rule</a></li>
 </ul>
 </div>
 
-<Section title="Cartesian Coordinates" id="cartesian_coordinates">
+<Section title="Cartesian coordinates" id="cartesian_coordinates">
 
     <p>
         Cartesian coordinates (also known as rectangular
@@ -86,7 +86,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </CalloutContainer>
 </Section>
 
-<SubSection title="Vector Bases" id="vector_bases">
+<SubSection title="Vector bases" id="vector_bases">
 
     <p>
         To describe vectors mathematically, we write them as a
@@ -154,7 +154,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </CalloutContainer>
 </SubSection>
 
-<SubSection title="Right Hand Rule" id="right_hand_rule">
+<SubSection title="Right hand rule" id="right_hand_rule">
 
 The Cartesian system is a "right-handed" coordinate system, which means that we can use the right-hand rule to determine the direction of the <InlineEquation equation='x, y' /> and <InlineEquation equation='z' /> axes. 
 
