vectors and scalars sentencing tense
put all titles, subtitles, and subsubtitles into sentencing tense in vectors and scalars page

--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -18,50 +18,50 @@ import Warning from "../../components/Warning.astro"
 
 <div slot="navtree">
   <ul class='list-group list-group-flush py-0'> 
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#scalars_vs_vectors'>Scalars vs. Vectors</a>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#scalars_vs_vectors'>Scalars vs. vectors</a>
         <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#vectors'>Vectors</a></li> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#scalars'>Scalars</a></li> 
         </ul>
     </li> 
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vector_operations'>Vector Operations</a>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vector_operations'>Vector operations</a>
         <ul class='list-group list-group-flush py-0'> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#scaling_vectors'>Scaling Vectors</a></li> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#vector_addition_and_subtraction'>Vector Addition and Subtraction</a></li> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#scaling_vectors'>Scaling vectors</a></li> 
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#vector_addition_and_subtraction'>Vector addition and subtraction</a></li> 
         </ul>
     </li>
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#unit_vectors'>Unit Vectors</a></li>
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vector_magnitude_and_direction'>Vector Magnitude and Direction</a></li>
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#scalar_and_vector_products'>Scalar and Vector Products</a>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#unit_vectors'>Unit vectors</a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#vector_magnitude_and_direction'>Vector magnitude and direction</a></li>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#scalar_and_vector_products'>Scalar and vector products</a>
         <ul class='list-group list-group-flush py-0'> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#dot_product'>Dot Product</a>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#dot_product'>Dot product</a>
                 <ul class='list-group list-group-flush py-0'> 
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#dot_product_identities'>Dot Product Identities</a>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#dot_product_identities'>Dot product identities</a>
                     </li> 
                 </ul>
             </li> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#cross_product'>Cross Product</a>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#cross_product'>Cross product</a>
                 <ul class='list-group list-group-flush py-0'> 
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#cross_product_identities'>Cross Product Identities</a>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#cross_product_identities'>Cross product identities</a>
                     </li> 
-                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#calculating_the_cross_product'>Calculating the Cross Product</a>
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#calculating_the_cross_product'>Calculating the cross product</a>
                     </li> 
                 </ul>
             </li> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#vector_projection'>Vector Projection</a>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#vector_projection'>Vector projection</a>
             </li> 
         </ul>
     </li>
 </ul>
 </div>
 
-<Section title="Vectors and Scalars" id="vectors_and_scalars"></Section>
+<Section title="Vectors and scalars" id="vectors_and_scalars"></Section>
 
 <!-- \subsection{Force Vectors} -->
 
 <!-- I'm not sure we need a reference page for this - or maybe put it at the end? -->
 
-<SubSection title="Scalars vs. Vectors" id="scalars_vs_vectors"></SubSection>
+<SubSection title="Scalars vs. vectors" id="scalars_vs_vectors"></SubSection>
 
 <SubSubSection title="Vectors" id="vectors">
   <p>
@@ -112,9 +112,9 @@ While a vector represents magnitude and direction, a <em>scalar</em> is a number
 
 </SubSubSection>
 
-<SubSection title="Vector Operations" id="vector_operations"></SubSection>
+<SubSection title="Vector operations" id="vector_operations"></SubSection>
 
-<SubSubSection title="Scaling Vectors" id="scaling_vectors">
+<SubSubSection title="Scaling vectors" id="scaling_vectors">
 
 <p>
 Vectors can be multiplied by a scalar number, which multiplies their length. 
@@ -126,7 +126,7 @@ Vectors can be multiplied by a scalar number, which multiplies their length.
 
 </SubSubSection>
 
-<SubSubSection title="Vector Addition and Subtraction" id="vector_addition_and_subtraction">
+<SubSubSection title="Vector addition and subtraction" id="vector_addition_and_subtraction">
 
 <p>
 Vectors can be added or subtracted together, using the parallelogram law of addition or the head-to-tail rule.
@@ -139,7 +139,7 @@ Vectors can be added or subtracted together, using the parallelogram law of addi
 
 </SubSubSection>
 
-<SubSection title="Unit Vectors" id="unit_vectors">
+<SubSection title="Unit vectors" id="unit_vectors">
 
   <p>
     A <em>unit vector</em> is any vector with a length of
@@ -182,7 +182,7 @@ Vectors can be added or subtracted together, using the parallelogram law of addi
   </Center>
 </SubSection>
 
-<SubSection title="Vector Magnitude and Direction" id="vector_magnitude_and_direction">
+<SubSection title="Vector magnitude and direction" id="vector_magnitude_and_direction">
 
 <p>
 Vectors can be written as a magnitude (length) multiplied by the unit vector in the same direction as the original vector. 
@@ -278,9 +278,9 @@ Alternatively, the vector components can be determined geometrically via the ang
 
 </SubSection>
 
-<SubSection title="Scalar and Vector Products" id="scalar_and_vector_products"></SubSection>
+<SubSection title="Scalar and vector products" id="scalar_and_vector_products"></SubSection>
 
-<SubSubSection title="Dot Product" id="dot_product">
+<SubSubSection title="Dot product" id="dot_product">
 
   <p>
     The <em>dot product</em> (also called the <em>inner
@@ -429,7 +429,7 @@ Alternatively, the vector components can be determined geometrically via the ang
 </SubSubSubSection>
 
 
-<SubSubSection title="Cross Product" id="cross_product">
+<SubSubSection title="Cross product" id="cross_product">
 
   <p>
     The cross product can be defined in terms of components by:
@@ -592,7 +592,7 @@ Alternatively, the vector components can be determined geometrically via the ang
 
 </SubSubSubSection>
 
-<SubSubSection title="Vector Projection" id="vector_projection">
+<SubSubSection title="Vector projection" id="vector_projection">
 
   <p>
     The projection and complementary projection are:
