moments sentencing tense
put all titles and subtitles into sentencing tense in moments page

--- a/src/pages/sta/moments.astro
+++ b/src/pages/sta/moments.astro
@@ -73,7 +73,7 @@ The magnitude of the moment can be written as
 
 <!-- lectures 7 and 8 -->
 
-<SubSection title="Couple Moment" id="couple_moment">
+<SubSection title="Couple moment" id="couple_moment">
 
 A couple moment is a set of two equal and opposite forces with parallel lines of action that produce a moment. 
 
